@@ -1,4 +1,5 @@
 ---version 2.0.3 yet to be released---
+18-oct-2008 - adelikat - Win32 - added -cfg (config file) command line argument
 08-oct-2008 - zeromus - SF [ 2073105 ] Laptop Volume Control keys make FCEUX go crazy and crash
 08-oct-2008 - zeromus - SF [ 2073113 ] Child windows inside debugging window get invalid sizes
 08-oct-2008 - zeromus - SF [ 2153843 ] Lua ignores second joypad.set()
